[workspace]
resolver = "3"
members = [
    ".",
    "inline-config-macros",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
authors = ["YishiMichael (GitHub)"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/YishiMichael/inline-config"
repository = "https://github.com/YishiMichael/inline-config"
keywords = ["config", "include", "inline", "structure"]
categories = ["config", "data-structures"]

[package]
name = "inline-config"
description = "Effortlessly embed config modules and access with any compatible types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["json", "toml", "yaml"]
indexmap = ["inline-config-macros/indexmap"]
json = ["inline-config-macros/json"]
toml = ["inline-config-macros/toml"]
yaml = ["inline-config-macros/yaml"]

[dependencies.inline-config-macros]
version = "0.3.2"
path = "inline-config-macros"

[dev-dependencies.indexmap]
version = "2.12.1"

[[example]]
name = "basic"

[[example]]
name = "include"

[[example]]
name = "order"
required-features = ["indexmap"]
