[package]
name = "inline-config-macros"
description = "Procedual macros for inline-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
default = ["json", "toml", "yaml"]
indexmap = ["serde_json?/preserve_order", "toml?/preserve_order"]
json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]

[dependencies.convert_case]
version = "0.10.0"

[dependencies.darling]
version = "0.23.0"

[dependencies.indexmap]
version = "2.12.1"

[dependencies.proc-macro-error]
version = "1.0.4"

[dependencies.proc-macro2]
version = "1.0.103"
features = ["span-locations"]

[dependencies.quote]
version = "1.0.42"

[dependencies.syn]
version = "2.0.111"

[dependencies.serde_json]
version = "1.0.148"
optional = true

[dependencies.serde_yaml]
version = "0.9.34"
optional = true

[dependencies.toml]
version = "0.9.10"
features = ["parse", "serde"]
optional = true
