[package]
name = "inline-config-macros"
description = "Procedual macros for inline-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
default = ["json", "toml", "yaml"]
indexmap = ["dep:indexmap", "serde_json?/preserve_order", "toml?/preserve_order"]
json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]

[dependencies.darling]
version = "0.23.0"

[dependencies.macro-string]
version = "0.2.0"

[dependencies.proc-macro2]
version = "1.0.106"

[dependencies.quote]
version = "1.0.44"

[dependencies.syn]
version = "2.0.117"

[dependencies.indexmap]
version = "2.13.0"
optional = true

[dependencies.serde_json]
version = "1.0.149"
optional = true

[dependencies.serde_yaml]
version = "0.9.34"
optional = true

[dependencies.toml]
version = "1.0.3"
features = ["parse", "serde"]
optional = true
